--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
 	"[typescript]": {
 		"editor.defaultFormatter": "denoland.vscode-deno"
 	},
+	// "files.exclude": {
+	// 	"**/public": true
+	// }
 	"[typescriptreact]": {
 		"editor.defaultFormatter": "denoland.vscode-deno"
 	}
